--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ php:
   - 5.4
 
 env:
-  - LARAVEL_VERSION="5.0.*@dev" TESTBENCH_VERSION="~3.0@dev"
+  - LARAVEL_VERSION="5.0.*" TESTBENCH_VERSION="~3.0"
 
 before_script:
   - composer self-update
   - mysql -e 'create database translatable_test;'
   - echo "CREATE USER 'homestead'@'localhost' IDENTIFIED BY 'secret'; \n GRANT ALL PRIVILEGES ON * . * TO 'homestead'@'localhost'; \nFLUSH PRIVILEGES; \n" | mysql -u root
-#  - composer require orchestra/testbench:"$TESTBENCH_VERSION" --dev
-#  - composer require illuminate/support:"$LARAVEL_VERSION" --dev
+  - composer require orchestra/testbench:"$TESTBENCH_VERSION"
+  - composer require illuminate/support:"$LARAVEL_VERSION"
   - composer install
 
 script: phpunit --coverage-text
