--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
 
 env:
   - LARAVEL_VERSION="5.0.*" TESTBENCH_VERSION="3.0.*"
+  - LARAVEL_VERSION="5.1.*" TESTBENCH_VERSION="3.1.*"
 
 before_script:
   - composer self-update
